--- a/package.json
+++ b/package.json
@@ -18,10 +18,8 @@
     "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.3.3"
   },
-  "scripts": {
-    "test": "serverless-bundle test"
-  },
   "dependencies": {
+    "stripe": "^8.142.0",
     "uuid": "^7.0.3"
   }
 }
