--- a/serverless.yml
+++ b/serverless.yml
@@ -19,6 +19,7 @@ provider:
   # under process.env.
   environment:
     tableName: notes
+    stripeSecretKey: ${env:sk_live_USyqttgcWz6cz8LKDOtfRC3V00zNWvnNFl}
 
   # 'iamRoleStatements' defines the permission policy for the Lambda function.
   # In this case Lambda functions are granted with permissions to access DynamoDB.
@@ -89,4 +90,14 @@ functions:
       - http:
           path: notes/{id}
           method: delete
+          authorizer: aws_iam
+  billing:
+    # Defines an HTTP API endpoint that calls the main function in billing.js
+    # - path: url path is /billing
+    # - method: POST request
+    handler: billing.main
+    events:
+      - http:
+          path: billing
+          method: post
           authorizer: aws_iam
