--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "devDependencies": {
     "aws-sdk": "^2.883.0",
+    "jest": "^25.5.4",
     "serverless-bundle": "^3.2.0",
     "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.3.3"
